--- a/styles.css
+++ b/styles.css
@@ -143,16 +143,13 @@ body {
     color: var(--accent-color);
 }
 .main-info-container{
- 
     max-width: 1000px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(490px, 1fr));
     justify-self: center;
     gap: 20px;
-    width: 100vw;
-    padding-left: 5%;
-    padding-right: 5%;
-  
+    width: 100%;
+    
 }
 
 .static-info{
@@ -162,26 +159,33 @@ body {
     position: sticky;
     top: 10px;
     height: 100vh;
-    margin:10px ;
+    margin:10px;
     color: white;
+    max-width: 100vw;
     width: 100%;
+    box-sizing: border-box;
     @media(width<1000px){
         position: static;
     }
 }
 .scroll-info{
     display: flex;
-    
+    width: 100%;
     flex-direction: column;
     gap: 200px;
+    max-width: 100vw;
+    box-sizing: border-box;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .aboutMe{
-    
     display: flex;
-    max-width: 800px;
+    max-width: 100vw;
     justify-self: center;
     flex-direction: column;
     animation: unfocus linear both;
+    width: 100%;
+    box-sizing: border-box;
     
     animation-timeline: view();
     animation-range: entry 30% cover 50%;
@@ -202,6 +206,8 @@ body {
     font-size: 20px;
 }
 .experiencia{
+    max-width: 100vw;
+    width: 100%;
     animation: unfocus linear both;
     animation-timeline: view();
     animation-range: entry 30% cover 50%;
@@ -236,7 +242,8 @@ body {
     opacity: 1;
     height: 400px;
     background-color: var(--background-color);
-    box-shadow: 10px 10px 20px #eaa721 ;
+    box-shadow: 10px 10px 20px #eaa721;
+    
 
 }
 .card h2{
@@ -248,16 +255,14 @@ body {
     color: var(--accent-color);
 }
 .text-container{
-background-color: red;
-width: 100px;
+
 }
 .proyectos{
     height: 600px;
-    width: 100vw ;
+    max-width: 100vw ;
 }
 .text-card{
-    
-  width: 50%;
+
 }
 .logo-container{
     display: flex;
